--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+JavaLessons/.idea/.name
+JavaLessons/.idea/compiler.xml
+JavaLessons/.idea/copyright/profiles_settings.xml
+JavaLessons/.idea/vcs.xml
+JavaLessons/.idea/workspace.xml
+JavaLessons/.idea/modules.xml
+JavaLessons/JavaLessons.iml
+JavaLessons/.idea/misc.xml
